--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "burokku",
-  "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "version": "0.0.13",
+  "description": "a lightweight tool for conditionally rendering react block of components",
   "author": "@Seyifunmitan",
   "license": "MIT",
-  "repository": "@Seyifunmitan/burokku",
+  "repository": "@Seyifunmitan/burokku_",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.10",
